5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1637_1055.log
== TEST (2019-04-11 10:27:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
R = ((vo**2)*(sin(radians(2*a))))/g
vo = float (input("Digite a velocidade inicial:"))
a = float (input("Digite o angulo do vetor de lancamentos com o solo:"))
g = 9.8

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R = ((vo**2)*(sin(radians(2*a))))/g
NameError: name 'vo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float (input("Digite a velocidade inicial:"))
a = float (input("Digite o angulo do vetor de lancamentos com o solo:"))
g = 9.8
R = ((vo**2)*(sin(radians(2*a))))/g

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R = ((vo**2)*(sin(radians(2*a))))/g
NameError: name 'vo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float (input("Digite a velocidade inicial:"))
a = float (input("Digite o angulo do vetor de lancamentos com o solo:"))
D = float (input("Digite a distancia entre o passaro e o porco:"))
g = 9.8
R = ((vo**2)*(sin(radians(2*a))))/g
print (R)

-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float (input("Digite a velocidade inicial:"))
a = float (input("Digite o angulo do vetor de lancamentos com o solo:"))
D = float (input("Digite a distancia entre o passaro e o porco:"))
g = 9.8
R = ((vo**2)*(sin(radians(2*a))))/g
if (abs(D-R)<0.1):
	print (sim)
else:
	print(nao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print (sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float (input("Digite a velocidade inicial:"))
a = float (input("Digite o angulo do vetor de lancamentos com o solo:"))
D = float (input("Digite a distancia entre o passaro e o porco:"))
g = 9.8
R = ((vo**2)*(sin(radians(2*a))))/g
if (abs(D-R)<0.1):
	print ("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float (input("Digite a velocidade inicial:"))
a = float (input("Digite o angulo do vetor de lancamentos com o solo:"))
D = float (input("Digite a distancia entre o passaro e o porco:"))
g = 9.8
R = ((vo**2)*(sin(radians(2*a))))/g
if (abs(D-R)<0.1):
	print ("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.148882
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
